# irs_clang

./: .clang-format  CMakeLists.txt  README.md
ClangTidyModule/: ClassFieldNaming.cpp  ClassFieldNaming.h  FuncParamsNaming.cpp  FuncParamsNaming.h  IrsTidyModule.cpp  TypeNamingCheck.cpp  TypeNamingCheck.h  TypedefNamingCheck.cpp  TypedefNamingCheck.h
Tests/: CMakeLists.txt  RunClangTidy.cmake  irs-class-field-naming.cpp  irs-func-params-naming.cpp  irs-type-naming.cpp  irs-typedef-naming.cpp
